# roboarm

./: .gitignore  .travis.yml  Cargo.toml  Makefile  Pipfile  README.md  network_weights.wghts  plotresults.py
arduino_code/: README.md  main.ino
arduino_code/main/: main.ino
arduino_code/scripts/servoplacement/: servoplacement.ino
experiment/: Cargo.toml  Makefile  arm.urdf
experiment/configs/: genetic.yaml  inference.yaml  random.yaml
experiment/src/: expconfig.rs  expresults.rs  expstate.rs  main.rs  netconfig.rs  network.rs
roboarm/: .gdbinit  Cargo.toml  Makefile  README.md  openocd.gdb
roboarm/.cargo/: config
roboarm/openocdstuff/: README.md
roboarm/src/: main.rs
roboarm/src/commands/: mod.rs
roboarm/src/console/: mod.rs
roboarm/src/leds/: led.rs  mod.rs
roboarm/src/servos/: mod.rs
src/: main.rs
teleop/: Cargo.toml  Makefile  README.md
teleop/src/: main.rs
teleop/src/commands/: mod.rs
teleop/src/input/: user_input.rs
teleop/src/serial/: comms.rs  communication.rs  mod.rs  port.rs  testport.rs
teleop/tests/: test_script.txt
