[package]
name = "roboarm"
version = "0.1.0"
authors = ["Max Strange <maxfieldstrange@gmail.com"]
description = "Simple robot arm for a class for my Master's program at UW Bothell."
license = "MIT OR Apache-2.0"
repository = "https://MaxStrange/roboarm"

[dependencies]
cortex-m = "0.5.6"
heapless = "0.3.7"
cortex-m-rt = "0.6.3"

[dependencies.tm4c123x-hal]
version = "0.4.0"
features = ["rt"]

